--- a/devblog/static/css/ckblog.css
+++ b/devblog/static/css/ckblog.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 10pt;
     width: 100%;
     background-image: url('/static/img/bkgtile.jpg');
     background-repeat: repeat;
@@ -54,7 +54,8 @@ h1, h2, h3 {
 }
 
 #banner header {
-    width: 940px;
+    max-width: 940px;
+    width: 90%;
     margin: 2em auto;
     text-align: center;
 }
@@ -72,7 +73,8 @@ h1, h2, h3 {
 
 footer {
     margin: 1em auto;
-    width: 940px;
+    max-width: 940px;
+    width: 90%;
 }
 
 footer p {
@@ -89,7 +91,8 @@ footer p {
 }
 
 #main-menu ul {
-    width: 940px;
+    max-width: 940px;
+    width: 90%;
     list-style-type: none;
     margin: 0 auto;
     text-align: center;
@@ -118,7 +121,8 @@ footer p {
 }
 
 .main-body {
-    width: 940px;
+    max-width: 940px;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
